tests/invalid/Void_Invalid_3.whiley
import * from whiley.lang.*

method method() -> void:
    b = 1

method main(System.Console sys) -> void:
    a = method()
